--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
             <version>1.16-R0.4</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.ini4j</groupId>
+            <artifactId>ini4j</artifactId>
+            <version>0.5.4</version>
+        </dependency>
     </dependencies>
 
 </project>
