--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
             <groupId>org.ini4j</groupId>
             <artifactId>ini4j</artifactId>
             <version>0.5.4</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
