--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
             <version>0.5.4</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.23</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
